--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+matplotlib==3.8.0
 numpy==1.24.3
 pandas==2.0.3
 plotly==5.9.0
 scipy==1.12.0
+seaborn==0.13.2
 statsmodels==0.14.0
 streamlit==1.31.0
